--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -95,7 +95,7 @@
     </header>
 
     <main>
-      <h1 class="topic">Музыкальный инструмент Лира</h1>
+      <h1 class="topic">Музыкальный инструмент лира</h1>
       <p class="content">
         Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего
         музыкального инструмента- <a href="../infolira/infolira.html">Лира</a>,
