--- a/pages/en/en.html
+++ b/pages/en/en.html
@@ -20,7 +20,7 @@
 
   <body>
     <main>
-      <h1 class="topic">Musical instruments Psaltery, lyre</h1>
+      <h1 class="topic">Musical instruments psaltery, lyre</h1>
       <p class="content">
         Greetings! My name is Eugene, I am from Belarus and I am engaged in the
         manufacture of ancient musical instruments. My instruments are handmade,
