--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -13,8 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Купить Лиру. Лира Кравик. Kravik Lyre, недорого. Лира музыкальный
-      инструмент.
+      Купить Лиру. Музыкальный инструмент, Kravik Lyre, недорого.
     </title>
     <link rel="stylesheet" type="text/css" href="./lira.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
