--- a/pages/infolira/infolira.html
+++ b/pages/infolira/infolira.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Kravik Lyre (Кравик-Лира) музыкальный инструмент Лира
+      Kravik Lyre (Кравик-Лира) музыкальный инструмент
     </title>
     <link rel="stylesheet" type="text/css" href="./infolira.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
