--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли купить, недорого, музыкальный инструмент гусли, старинный струнный
-      инструмент, цена, кантеле.
+      Гусли купить, недорого, музыкальный инструмент струнный, народный, старинный.
     </title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
