--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="keywords"
-      content="гусли, крыловидные, кантеле, музыкальный инструмент старинный, купить гусли, цена, кокле, каннель, кантеле, канклес"
+      content="гусли, крыловидные, кантеле, музыкальный инструмент, старинный, купить, цена, народный, струнный"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
