--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -131,7 +131,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 300 Br
+              Лира Кравик / Kravik Lyre №2, 7 струн,<br />нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
@@ -232,7 +232,7 @@
         <a href="../nl/nl.html">nl</a>
       </div>
 
-      <div class="footer-date">Copyright © 2023</div>
+      <div class="footer-date">Copyright © 2024</div>
     </footer>
 
     <link href="../../viewer/viewer.min.css" rel="stylesheet" />
