--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
         </ul>
 
-        <ul class="images images1">
+<!--         <ul class="images images1">
           <li class="visible">
             <img src="images/product/5/1.jpg" alt="Гусли-изображение-1" />
           </li>
@@ -207,7 +207,7 @@
             <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
           </div>
-        </ul>
+        </ul> -->
 
         <ul class="images images1">
           <li class="visible">
@@ -239,20 +239,6 @@
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/7/3.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/7/4.jpg" alt="Гусли-изображение-2" />
-          </div>
-        </ul>
-
-        <ul class="images images1">
-          <li class="visible">
-            <img src="images/product/8/1.jpg" alt="Гусли-изображение-1" />
-          </li>
-
-          <li>
-            <h3 class="textproduct">Гусли № 8, 12 струн,<br />цена: 360 Br</h3>
-          </li>
-
-          <div class="hidden-photos">
-            <img src="images/product/8/2.jpg" alt="Гусли-изображение-2" />
           </div>
         </ul>
 
@@ -423,7 +409,7 @@
         <a href="./pages/nl/nl.html">nl</a>
       </div>
 
-      <div class="footer-date">Copyright © 2023</div>
+      <div class="footer-date">Copyright © 2024</div>
     </footer>
 
     <link href="viewer/viewer.min.css" rel="stylesheet" />
