--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         приобретения инструмента и вопросам свяжитесь со мной по данным
         <a href="#contactsjump">контактам</a>. Возможна отправка в другие
         страны. Условия доставки и оплаты согласовываются индивидуально.Также
-        изготавливаю <a href="./pages/lira/lira.html">Лиру</a>
+        изготавливаю <a href="./pages/lira/lira.html">Лиру</a>.
       </p>
 
       <!-- Slideshow container -->
@@ -140,7 +140,7 @@
             <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
           </li>
           <li>
-            <h3 class="textproduct">Гусли № 1, 11 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 1, 11 струн.<br /></h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
@@ -154,7 +154,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 12 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 2, 12 струн.<br /></h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -168,7 +168,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br /></h3>
           </li>
 
           <div class="hidden-photos">
@@ -184,7 +184,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br /></h3>
           </li>
 
           <div class="hidden-photos">
@@ -215,7 +215,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 6, 11 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 6, 11 струн.<br /></h3>
           </li>
 
           <div class="hidden-photos">
@@ -232,7 +232,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 7, 12 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 7, 12 струн.<br /></h3>
           </li>
 
           <div class="hidden-photos">
@@ -248,7 +248,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 9, 12 струн<br /></h3>
+            <h3 class="textproduct">Гусли № 9, 12 струн.<br /></h3>
           </li>
 
           <div class="hidden-photos">
