--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
           </li>
           <li>
-            <h3 class="textproduct">Гусли № 1, 11 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 1, 11 струн.<br />цена: 250 Br</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
@@ -154,7 +154,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 12 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 2, 12 струн.<br />цена: 360 Br</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -168,7 +168,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 330 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -184,7 +184,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -194,28 +194,13 @@
           </div>
         </ul>
 
-<!--         <ul class="images images1">
-          <li class="visible">
-            <img src="images/product/5/1.jpg" alt="Гусли-изображение-1" />
-          </li>
-
-          <li>
-            <h3 class="textproduct">Гусли № 5, 12 струн,<br />цена: Br</h3>
-          </li>
-
-          <div class="hidden-photos">
-            <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
-            <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
-          </div>
-        </ul> -->
-
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/6/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 6, 11 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 6, 11 струн.<br />цена: 300 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -232,7 +217,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 7, 12 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 7, 12 струн.<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -248,7 +233,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 9, 12 струн.<br /></h3>
+            <h3 class="textproduct">Гусли № 9, 12 струн.<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
