--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 12 струн.<br />цена: 340 Br</h3>
+            <h3 class="textproduct">Гусли № 2, 12 струн.<br />цена: 340 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -156,7 +156,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 330 Br</h3>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 330 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -172,7 +172,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 360 Br</h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 360 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -188,7 +188,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 6, 11 струн.<br />цена: 300 Br</h3>
+            <h3 class="textproduct">Гусли № 6, 11 струн.<br />цена: 300 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -205,7 +205,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 7, 12 струн.<br />цена: 360 Br</h3>
+            <h3 class="textproduct">Гусли № 7, 12 струн.<br />цена: 360 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -221,7 +221,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 9, 12 струн.<br />цена: 360 Br</h3>
+            <h3 class="textproduct">Гусли № 9, 12 струн.<br />цена: 360 BYN</h3>
           </li>
 
           <div class="hidden-photos">
