--- a/index.html
+++ b/index.html
@@ -138,15 +138,32 @@
 
         <ul class="images images1">
           <li class="visible">
+            <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 1, 11 струн.<br />цена: 360 BYN</h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/1/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/1/4.jpg" alt="Гусли-изображение-4" />
+            <img src="images/product/1/5.jpg" alt="Гусли-изображение-5" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="images/product/2/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 12 струн.<br />цена: 340 BYN</h3>
+            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 360 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/2/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/2/4.jpg" alt="Гусли-изображение-4" />
           </div>
         </ul>
 
@@ -156,7 +173,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 330 BYN</h3>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 360 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -172,7 +189,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 340 BYN</h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 370 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -188,14 +205,13 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 6, 11 струн.<br />цена: 300 BYN</h3>
+            <h3 class="textproduct">Гусли № 6, 11 струн.<br />цена: 360 BYN</h3>
           </li>
 
           <div class="hidden-photos">
             <img src="images/product/6/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/6/3.jpg" alt="Гусли-изображение-3" />
             <img src="images/product/6/4.jpg" alt="Гусли-изображение-4" />
-            <img src="images/product/6/5.jpg" alt="Гусли-изображение-5" />
           </div>
         </ul>
 
@@ -205,7 +221,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 7, 12 струн.<br />цена: 360 BYN</h3>
+            <h3 class="textproduct">Гусли № 7, 12 струн.<br />цена: 370 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -221,7 +237,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 9, 12 струн.<br />цена: 360 BYN</h3>
+            <h3 class="textproduct">Гусли № 9, 12 струн.<br />цена: 370 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -349,6 +365,11 @@
                 <img src="./images/review/10.jpg" alt="Гусли-отзыв-10" />
                 <img src="./images/review/11.jpg" alt="Гусли-отзыв-11" />
                 <img src="./images/review/12.png" alt="Гусли-отзыв-12" />
+                <img src="./images/review/13.jpg" alt="Гусли-отзыв-13" />
+                <img src="./images/review/14.jpg" alt="Гусли-отзыв-14" />
+                <img src="./images/review/15.jpg" alt="Гусли-отзыв-15" />
+                <img src="./images/review/16.jpg" alt="Гусли-отзыв-16" />
+                <img src="./images/review/17.jpg" alt="Гусли-отзыв-17" />
               </div>
             </ul>
           </div>
