--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -140,6 +140,23 @@
             <img src="../../images/lira/2/4.jpg" alt="Лира-изображение-4" />
           </div>
         </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/3/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №3, 7 струн,<br /> в наличии 1000 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/3/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/3/3.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
+        
       </div>
     </main>
 
