--- a/index.html
+++ b/index.html
@@ -231,6 +231,38 @@
             <img src="images/product/4/3.jpg" alt="Гусли-изображение-3" />
           </div>
         </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/5/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 5, 12 струн.<br />цена: 420 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/5/4.jpg" alt="Гусли-изображение-3" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/7/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 7, 12 струн.<br />цена: 400 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/7/3.jpg" alt="Гусли-изображение-3" />
+          </div>
+        </ul>
+
       </div>
 
       <div class="video-block">
