--- a/index.html
+++ b/index.html
@@ -263,6 +263,37 @@
           </div>
         </ul>
 
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/8/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 450 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/8/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/8/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/8/4.jpg" alt="Гусли-изображение-4" />
+            <img src="images/product/8/5.jpg" alt="Гусли-изображение-5" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/10/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 450 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/10/2.jpg" alt="Гусли-изображение-2" />
+          </div>
+        </ul>
+
       </div>
 
       <div class="video-block">
