--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 450 BYN</h3>
+            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 460 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -286,11 +286,60 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 450 BYN</h3>
+            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 460 BYN</h3>
           </li>
 
           <div class="hidden-photos">
             <img src="images/product/10/2.jpg" alt="Гусли-изображение-2" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/11/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 11, 12 струн.<br />цена: 460 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/11/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/11/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/11/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/12/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 460 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/12/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/12/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/12/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/13/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли / Кантеле № 13, 11 струн.<br />цена: 400 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/13/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/13/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/13/4.jpg" alt="Гусли-изображение-4" />
+            <img src="images/product/13/5.jpg" alt="Гусли-изображение-5" />
           </div>
         </ul>
 
