--- a/index.html
+++ b/index.html
@@ -296,22 +296,6 @@
 
         <ul class="images images1">
           <li class="visible">
-            <img src="images/product/11/1.jpg" alt="Гусли-изображение-1" />
-          </li>
-
-          <li>
-            <h3 class="textproduct">Гусли № 11, 12 струн.<br />цена: 460 BYN</h3>
-          </li>
-
-          <div class="hidden-photos">
-            <img src="images/product/11/2.jpg" alt="Гусли-изображение-2" />
-            <img src="images/product/11/3.jpg" alt="Гусли-изображение-3" />
-            <img src="images/product/11/4.jpg" alt="Гусли-изображение-4" />
-          </div>
-        </ul>
-
-        <ul class="images images1">
-          <li class="visible">
             <img src="images/product/12/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
@@ -332,7 +316,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли / Кантеле № 13, 11 струн.<br />цена: 400 BYN</h3>
+            <h3 class="textproduct">Гусли / Кантеле № 13 Клён, 11 струн.<br />цена: 400 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -340,6 +324,23 @@
             <img src="images/product/13/3.jpg" alt="Гусли-изображение-3" />
             <img src="images/product/13/4.jpg" alt="Гусли-изображение-4" />
             <img src="images/product/13/5.jpg" alt="Гусли-изображение-5" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/14/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли / Кантеле № 14 Ель, Сосна , 11 струн.<br />цена: 400 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/14/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/14/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/14/4.jpg" alt="Гусли-изображение-4" />
+            <img src="images/product/14/5.jpg" alt="Гусли-изображение-5" />
           </div>
         </ul>
 
