--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -148,7 +148,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №3, 7 струн,<br /> в наличии 700 BYN
+              Лира Кравик / Kravik Lyre №3, 7 струн,<br /> нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
