--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -156,6 +156,23 @@
             <img src="../../images/lira/3/3.jpg" alt="Лира-изображение-3" />
           </div>
         </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/4/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №4, 7 струн,<br /> в наличии 999 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/4/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/4/3.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/4/4.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
         
       </div>
     </main>
