--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 1, 11 струн.<br />цена: 440 BYN</h3>
+            <h3 class="textproduct">Гусли № 1, 11 струн.<br />цена: 400 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
@@ -158,7 +158,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 440 BYN</h3>
+            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 400 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -169,11 +169,41 @@
 
         <ul class="images images1">
           <li class="visible">
+            <img src="images/product/6/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 400 BYN</h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/6/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/6/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/6/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/7/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br />цена: 400 BYN</h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/7/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/7/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="images/product/3/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 480 BYN</h3>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 440 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -188,7 +218,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 480 BYN</h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />цена: 440 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -203,7 +233,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 5, 12 струн.<br />цена: 480 BYN</h3>
+            <h3 class="textproduct">Гусли № 5, 12 струн.<br />цена: 440 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -220,7 +250,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 480 BYN</h3>
+            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 450 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -237,7 +267,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 480 BYN</h3>
+            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 450 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -251,7 +281,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 400 BYN</h3>
+            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 530 BYN</h3>
           </li>
 
           <div class="hidden-photos">
