--- a/index.html
+++ b/index.html
@@ -263,6 +263,21 @@
 
         <ul class="images images1">
           <li class="visible">
+            <img src="images/product/9/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 9, 11 струн.<br />цена: 500 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/9/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/9/3.jpg" alt="Гусли-изображение-3" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="images/product/10/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
@@ -281,7 +296,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 530 BYN</h3>
+            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 500 BYN</h3>
           </li>
 
           <div class="hidden-photos">
