--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -164,7 +164,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №4, 7 струн,<br /> в наличии 750 BYN
+              Лира Кравик / Kravik Lyre №4, 7 струн,<br /> нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
