--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -170,7 +170,23 @@
           <div class="hidden-photos">
             <img src="../../images/lira/4/2.jpg" alt="Лира-изображение-2" />
             <img src="../../images/lira/4/3.jpg" alt="Лира-изображение-3" />
-            <img src="../../images/lira/4/4.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/4/4.jpg" alt="Лира-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/5/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №5, 7 струн,<br /> нет в наличии
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/5/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/5/3.jpg" alt="Лира-изображение-3" />
           </div>
         </ul>
         
