--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 1, 11 струн.<br /><!-- цена: 400 BYN --></h3>
+            <h3 class="textproduct">Гусли № 1, 11 струн.<br />цена: 400 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
@@ -158,7 +158,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 11 струн.<br /><!-- цена: 400 BYN --></h3>
+            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 400 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -173,7 +173,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br /><!-- цена: 400 BYN --></h3>
+            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 400 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/6/2.jpg" alt="Гусли-изображение-2" />
@@ -188,7 +188,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br /><!-- цена: 400 BYN --></h3>
+            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br />цена: 400 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
@@ -203,7 +203,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн.<br /><!-- цена: 440 BYN --></h3>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 440 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -218,7 +218,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br /><!-- цена: 440 BYN --></h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />440 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -233,7 +233,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 5, 12 струн.<br /><!-- цена: 440 BYN --></h3>
+            <h3 class="textproduct">Гусли № 5, 12 струн.<br />120 BYN нет в наличии</h3>
           </li>
 
           <div class="hidden-photos">
@@ -250,7 +250,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 8, 12 струн.<br /><!-- цена: 450 BYN --></h3>
+            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 450 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -267,7 +267,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 9, 11 струн.<br /><!-- цена: 500 BYN --></h3>
+            <h3 class="textproduct">Гусли № 9, 11 струн.<br />цена: 500 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -282,7 +282,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 10, 12 струн.<br /><!-- цена: 450 BYN --></h3>
+            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 450 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -296,7 +296,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 12, 12 струн.<br /><!-- цена: 500 BYN --></h3>
+            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 500 BYN</h3>
           </li>
 
           <div class="hidden-photos">
