--- a/index.html
+++ b/index.html
@@ -306,6 +306,35 @@
           </div>
         </ul>
 
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/11/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 11, 20 струн.<br />цена: 1200 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/11/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/11ц/3.jpg" alt="Гусли-изображение-3" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/15/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 15, 20 струн.<br />цена: 1200 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/15/2.jpg" alt="Гусли-изображение-2" />
+          </div>
+        </ul>
+
 
       </div>
 
