--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -189,6 +189,23 @@
             <img src="../../images/lira/5/3.jpg" alt="Лира-изображение-3" />
           </div>
         </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/6/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №6, 7 струн,<br /> цена: 1100 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/6/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/6/3.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/6/4.jpg" alt="Лира-изображение-4" />
+          </div>
+        </ul>
         
       </div>
     </main>
