--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
           <div class="hidden-photos">
             <img src="images/product/11/2.jpg" alt="Гусли-изображение-2" />
-            <img src="images/product/11ц/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/11/3.jpg" alt="Гусли-изображение-3" />
           </div>
         </ul>
 
