--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -114,7 +114,7 @@
           </li>
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №1, 7 струн,<br />нет в наличии
+              Лира №1, 7 струн,<br />нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
@@ -131,7 +131,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №2, 7 струн,<br />нет в наличии
+              Лира №2, 7 струн,<br />нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
@@ -148,7 +148,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №3, 7 струн,<br /> нет в наличии
+              Лира №3, 7 струн,<br /> нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
@@ -164,7 +164,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №4, 7 струн,<br /> нет в наличии
+              Лира №4, 7 струн,<br /> нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
@@ -204,6 +204,40 @@
             <img src="../../images/lira/6/2.jpg" alt="Лира-изображение-2" />
             <img src="../../images/lira/6/3.jpg" alt="Лира-изображение-3" />
             <img src="../../images/lira/6/4.jpg" alt="Лира-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/7/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Троссинген / Trossingen lyre, 6 струн,<br /> цена: 900 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/7/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/7/3.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
+
+              <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/8/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №8, 7 струн,<br /> цена: 1100 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/8/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/8/3.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/8/4.jpg" alt="Лира-изображение-4" />
+            <img src="../../images/lira/8/5.jpg" alt="Лира-изображение-4" />
           </div>
         </ul>
         
