--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br />цена: 400 BYN</h3>
+            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br />цена: 350 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
@@ -233,7 +233,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 5, 12 струн.<br />120 BYN нет в наличии</h3>
+            <h3 class="textproduct">Гусли № 5, 12 струн.<br />500 BYN </h3>
           </li>
 
           <div class="hidden-photos">
