--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -240,6 +240,22 @@
             <img src="../../images/lira/8/5.jpg" alt="Лира-изображение-4" />
           </div>
         </ul>
+
+              <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/9/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №9, 7 струн,<br /> цена: 1100 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/9/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/9/3.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
         
       </div>
     </main>
