--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 11, 20 струн.<br />цена: 1200 BYN</h3>
+            <h3 class="textproduct">Гусли шлемовидные № 11, 20 струн.<br />цена: 1200 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -327,7 +327,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 15, 20 струн.<br />цена: 1200 BYN</h3>
+            <h3 class="textproduct">Гусли шлемовидные № 15, 20 струн.<br />цена: 1200 BYN</h3>
           </li>
 
           <div class="hidden-photos">
