--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 400 BYN</h3>
+            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 400 BYN сейчас нет в наличии</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/6/2.jpg" alt="Гусли-изображение-2" />
@@ -397,6 +397,21 @@
                 alt="Instagram"
               />
               &nbsp; Instagram
+            </a>
+          </h3>
+
+          <h3>
+            <a
+              class="center"
+              href="https://www.facebook.com/evgenii.gusli"
+              target="_blank"
+            >
+              <img
+                class="contacts-icon-img"
+                src="images/facebook.png"
+                alt="facebook"
+              />
+              &nbsp; Facebook
             </a>
           </h3>
 
