--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -197,7 +197,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №6, 7 струн,<br /> цена: 1100 BYN
+              Лира Кравик / Kravik Lyre №6, 7 струн,<br /> цена: 800 BYN
             </h3>
           </li>
           <div class="hidden-photos">
@@ -214,7 +214,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Троссинген / Trossingen lyre, 6 струн,<br /> цена: 900 BYN
+              Лира Троссинген / Trossingen lyre, 6 струн,<br /> цена: 800 BYN
             </h3>
           </li>
           <div class="hidden-photos">
@@ -230,7 +230,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №8, 7 струн,<br /> цена: 1100 BYN
+              Лира Кравик / Kravik Lyre №8, 7 струн,<br /> цена: 800 BYN
             </h3>
           </li>
           <div class="hidden-photos">
@@ -248,7 +248,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №9, 7 струн,<br /> цена: 1100 BYN
+              Лира Кравик / Kravik Lyre №9, 7 струн,<br /> цена: 800 BYN
             </h3>
           </li>
           <div class="hidden-photos">
@@ -306,6 +306,21 @@
                 alt="Instagram"
               />
               &nbsp; Instagram
+            </a>
+          </h3>
+
+            <h3>
+            <a
+              class="center"
+              href="https://www.facebook.com/evgenii.gusli"
+              target="_blank"
+            >
+              <img
+                class="contacts-icon-img"
+                src="../../images/facebook.png"
+                alt="facebook"
+              />
+              &nbsp; Facebook
             </a>
           </h3>
 
