--- a/index.html
+++ b/index.html
@@ -139,11 +139,26 @@
 
         <ul class="images images1">
           <li class="visible">
+            <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 1, 12 струн.<br />цена: 450 BYN</h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/1/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/1/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="images/product/2/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 300 BYN</h3>
+            <h3 class="textproduct">Гусли № 2, 12 струн.<br />цена: 450 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
