--- a/index.html
+++ b/index.html
@@ -169,11 +169,41 @@
 
         <ul class="images images1">
           <li class="visible">
+            <img src="images/product/3/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 450 BYN</h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/3/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/3/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/3/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/5/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли/Кантеле/Kantele № 5, 11 струн.<br />цена: 350 BYN </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/5/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="images/product/6/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 300 BYN </h3>
+            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 350 BYN </h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/6/2.jpg" alt="Гусли-изображение-2" />
@@ -203,7 +233,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br />350 BYN</h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />380 BYN</h3>
           </li>
 
           <div class="hidden-photos">
