--- a/index.html
+++ b/index.html
@@ -307,6 +307,22 @@
 
         <ul class="images images1">
           <li class="visible">
+            <img src="images/product/14/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">Гусли № 14, 12 струн.<br />цена: 450 BYN</h3>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/14/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/14/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/14/4.jpg" alt="Гусли-изображение-4" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="images/product/11/1.jpg" alt="Гусли-изображение-1" />
           </li>
 
@@ -507,7 +523,7 @@
         <a href="./pages/nl/nl.html">nl</a>
       </div>
 
-      <div class="footer-date">Copyright © 2024</div>
+      <div class="footer-date">Copyright © 2025</div>
     </footer>
 
     <link href="viewer/viewer.min.css" rel="stylesheet" />
