--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -248,7 +248,7 @@
 
           <li>
             <h3 class="textproduct">
-              Лира Кравик / Kravik Lyre №9, 7 струн,<br /> цена: 800 BYN
+              Лира Кравик / Kravik Lyre №9, 7 струн,<br /> нет в наличии
             </h3>
           </li>
           <div class="hidden-photos">
