--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -256,6 +256,39 @@
             <img src="../../images/lira/9/3.jpg" alt="Лира-изображение-3" />
           </div>
         </ul>
+
+                <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/10/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №10, 7 струн,<br /> цена: 900 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/10/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/10/3.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/10/4.jpg" alt="Лира-изображение-4" />
+          </div>
+        </ul>
+
+                <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/11/1.jpg" alt="Лира-изображение-1" />
+          </li>
+
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №11, 7 струн,<br /> цена: 900 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/11/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/11/3.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
         
       </div>
     </main>
