add harp and kant

--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -110,6 +110,37 @@
       <div id="available">
         <ul class="images images1">
           <li class="visible">
+            <img src="../../images/lira/12/1.jpg" alt="Лира-изображение-1" />
+          </li>
+          <li>
+            <h3 class="textproduct">
+              Лира смычковая Tagelharpa Talharpa Тальхарпа Тагельхарпа №12, 3 нейлоновые струны,<br /> цена: 500 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/12/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/12/3.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/13/1.jpg" alt="Лира-изображение-1" />
+          </li>
+          <li>
+            <h3 class="textproduct">
+              Басовая Лира смычковая Tagelharpa Talharpa Тальхарпа Тагельхарпа №13, 4 металлические струны,<br /> цена: 550 BYN
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/13/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/13/3.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/13/4.jpg" alt="Лира-изображение-3" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
             <img src="../../images/lira/1/1.jpg" alt="Лира-изображение-1" />
           </li>
           <li>
